# KiTE-utils

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py
.github/workflows/: CI.yml  docs.yml  update-docs.yml
KiTE/: __init__.py  calibrate.py  calibration_models.py  diffusion_maps.py  metrics.py  plots.py  validation.py
KiTE/tests/: _cli.py  metrics_test.py  validation_test.py
KiTE_utils/: __init__.py  calibration.py  calibration_models.py  metrics.py  validation.py
KiTE_utils/tests/: __cli.py  calibration_test.py  metrics_test.py  validation_test.py
doc_template/: index.html.jinja2  module.html.jinja2
notebooks/: COMPAS_Calibration_Analysis.ipynb
