[metadata]
name = KiTE
description = Utilities for validating and calibrating Supervised Learning models
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/A-Good-System-for-Smart-Cities/KiTE-utils
author = Prachi Ingle, Arya Farahi
license = MIT License
classifiers =
    Intended Audience :: Education
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research :: AI Ethics :: ML Auditing
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Documentation = https://a-good-system-for-smart-cities.github.io/kite-utils-docs/KiTE.html
    Source = https://github.com/A-Good-System-for-Smart-Cities/KiTE-utils
    Tracker = https://github.com/A-Good-System-for-Smart-Cities/KiTE-utils/issues

[options]
zip_safe = True
packages = find:
include_package_data = True
install_requires =
    pandas>=1.4.3
    tqdm>=4.64.0
    decorator>=5.1.1
    joblib>=1.1.0
    kaleido>=0.2.1
    netcal>=1.2.1
    numpy>=1.23.2
    plotly>=5.10.0
    pytest>=7.1.2
    scikit_learn>=1.1.2
    scipy>=1.9.0
python_requires = >=3.8
setup_requires =
    setuptools_scm
    pytest-runner
tests_require =
    pytest


[aliases]
test=pytest

[flake8]
max-line-length = 88

ignore =
    E501,  # black formatter will be used for style and line length
    E203,  # space before : (needed for how black formats slicing)
    W503,  # line break before binary operator
    W504,  # line break after binary operator
    W291,  # trailing whitespace is necessary for documentation (black ignores this)
    W605,  # invalid escape sequence (ignore markdown syntax in doc strings)
    E262
exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    # The old directory contains Flake8 2.0
    old,
    # This contains our built documentation
    build,
    # This contains builds of flake8 that we don't want to check
    dist,
    # avoid egg folders
    .eggs,
    # version.py is not included in the Github Repository
    version.py
max-complexity = 10

[tool:pytest]
markers =
    validators: indicates testing validator method
